[metadata]
name = pygroovestats
version = 0.0.5
author = CyberKitsune
author_email = cyberkitsune09@gmail.com
description = Python bindings to query groovestats
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/cyberkitsune/pygroovestats
project_urls =
    Bug Tracker = https://github.com/cyberkitsune/pygroovestats/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    requests
    bs4
    html5lib

[options.packages.find]
where = src